--- a/app/views/enquiries/index.html.erb
+++ b/app/views/enquiries/index.html.erb
@@ -1,10 +1,7 @@
 <script type="text/javascript">
 $(function(){
   $("ul.tab-menus li.all").trigger('click');
-});
-
-$(document).ready(function(){
-activeMM("inquiresMM");
+  activeMM("enquiriesMM");
 });
 
 </script>
