--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -1,6 +1,7 @@
 <script type="text/javascript">
 $(function(){
   $("ul.tab-menus li.all").trigger('click');
+    activeMM("registrationsMM");
 });
 
 </script>
