--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -24,4 +24,5 @@
   <div class="actions" style="margin-bottom:10px;">
    <%= f.submit "Create Enquiry",{:class => "btnp fr"} %>
   </div>
+  <div class="cl"></div>
 <% end %>
