--- a/app/views/enquiries/_preferred_programmes.html.erb
+++ b/app/views/enquiries/_preferred_programmes.html.erb
@@ -7,6 +7,5 @@
     <%= render 'programme_details', :p => p, :parent => f.object_name.to_s %>  
   <% end %>
   <br/>
-   <%= f.link_to_add "Add more", :programmes,{:class => "btns"} %>
-   <div class="cl"></div>
-   <br/>
+   <%= f.link_to_add "Add more", :programmes,{:class => "btns fl"} %>
+   
