--- a/app/views/enquiries/_programme_details.html.erb
+++ b/app/views/enquiries/_programme_details.html.erb
@@ -34,7 +34,7 @@ $(function(){
        <% end %>
     <div class="cols">
     <div class="col6">
-    <div class="fbox">
+    <div class="frbox">
         <%= label_tag :country %>
         <%= p.collection_select(:country_id, 
                                 Country.order(:name), 
@@ -49,7 +49,7 @@ $(function(){
                                                '_programmes_attributes_index_institution_id',
                                                '/get_institutions/country/');"}) %>
     </div>
-    <div class="fbox">
+    <div class="frbox">
        <%= label_tag :city %>
         <!-- Setting the default selected city as the programmes city if chosen in the enquiry -->
         <% one = p.object.city_id %>
@@ -65,7 +65,7 @@ $(function(){
                                                '/get_institutions/city/');"}) %> &nbsp;&nbsp;
        
     </div>      
-    <div class="fbox">
+    <div class="frbox">
          <%= p.label :school %>
          <!-- Setting the default selected institution as the programmes institution if chosen in the enquiry -->
         <% four = p.object.institution_id %>
@@ -80,7 +80,7 @@ $(function(){
     </div>
  
 
-       <div class="fbox">
+       <div class="frbox">
         <%= label_tag :start_date,nil,{class: 'start_date'} %>
           <%= p.text_field :start_date,{class: 'dateField  caltf'} %>
         </div>
@@ -93,21 +93,21 @@ $(function(){
       <div class="cl"></div>
 </div>
 <div class="col6">
-        <div class="course_subject_text_div fbox" style='<%= sty[0] %>'>
+        <div class="course_subject_text_div frbox" style='<%= sty[0] %>'>
             <%= label_tag :course_subject %>
             <%= p.text_field :course_subject_text %>
        </div>
-        <div class="fbox">
+        <div class="frbox">
        <%= go_create(p,"course_level","level_id","name") %>
       </div>
-      <div class="fbox">
+      <div class="frbox">
        <%= go_create(p,"course_subject","subject_id","name",sty[1]) %>  
        </div>
-        <div class="end_date_div fbox">
+        <div class="end_date_div frbox">
               <%= label_tag :end_date %>
               <%= p.text_field :end_date,{class: 'dateField caltf '} %>
         </div>
-        <div class="fbox">
+        <div class="frbox">
         <%= go_create(p,"application_status","app_status_id","name",sty[2]) %>
         </div>
         
