link to button class
link to button class

--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -183,9 +183,7 @@
     <% end %>   
     
   <br/>
-      <span class="btns fr">
-      <%= f.link_to_add "Add more", :programmes %>
-      </span>
+      <%= f.link_to_add "Add more",:class => "btns fr", :programmes %>
   <br/>
   <div class="cl"></div>
   <!-- Course of Interest - ENDS -->
