--- a/app/views/enquiries/_enquiry_information.html.erb
+++ b/app/views/enquiries/_enquiry_information.html.erb
@@ -1,7 +1,7 @@
 
 
           <!-- NEW Enquiry - STARTS -->
-        <div class="boxp">
+        <div class="boxp box-theme-ch">
           <div >
         <!-- Enquiry INFORMATION - STARTS -->
           <div class="htab">
