--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -16,7 +16,7 @@
   
 <!-- NEW REGISTRATION - STARTS -->
 <div class="tab-content1" id="tab-content71">
-  <div class="boxp">
+  <div class="boxp box-theme-ch">
   <!-- PERSONAL INFORMATION - STARTS -->
   <div class="htab">
       <h5>
