Body align to top and left
Body align to top and left

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -123,7 +123,7 @@
     <table width="98%" cellpadding="5" cellspacing="5">
     
      <tr>
-     <td class="brgr" style="padding-right:15px">
+     <td class="brgr" style="padding-right:15px" valign="top" align="left">
       <%= yield %>
      </td>
      <td id="right-panel" valign="top" align="left">
