--- a/app/views/enquiries/_show.html.erb
+++ b/app/views/enquiries/_show.html.erb
@@ -31,19 +31,19 @@
                           [<%= stat %>]
                         </span>
                         </h5>
-                        <ul class="infosm">
-                        <li>Mobile : <%= a.mobile1 %>, <%= a.mobile2 %></li>
-                        <li>Email : <%= a.email1 %>, <%= a.email2 %></li>
-                        <li>Country of Origin : <%= disp1(a,"country_of_origin") %></li>
+                        <ul class="vlsdet">
+                        <li><label>Mobile </label>: <%= a.mobile1 %>, <%= a.mobile2 %></li>
+                        <li><label>Email </label>: <%= a.email1 %>, <%= a.email2 %></li>
+                        <li><label>Country of Origin </label>: <%= disp1(a,"country_of_origin") %></li>
                         </ul>
                     </div>
                     <div class="cl"></div>
                     <br/>
                     <h6><b>Personal information</b></h6>
-                    <ul class="infosm">
-                    <li>Date of Birth : <%= a.date_of_birth %></li>
-                    <li>Gender : <%= a.gender %></li>
-                    <li>Address : <%= disp0(a,'address') %></li>
+                    <ul class="vlsdet">
+                    <li><label>Date of Birth</label>: <%= a.date_of_birth %></li>
+                    <li><label>Gender</label>: <%= a.gender %></li>
+                    <li><label>Address</label>: <%= disp0(a,'address') %></li>
                     </ul><br/>
                     <h6><b>Preferred countries</b></h6>
                     <ul class="infosm">
