--- a/app/assets/stylesheets/jquery-ui-1.10.0.custom.css
+++ b/app/assets/stylesheets/jquery-ui-1.10.0.custom.css
@@ -806,8 +806,8 @@ body .ui-tooltip {
 	color: #333333;
 }
 .ui-widget-header {
-	border: 1px solid #e78f08;
-	background: #f6a828 url(images/ui-bg_gloss-wave_35_f6a828_500x100.png) 50% 50% repeat-x;
+	border: 1px solid #CCC;
+	background: #DDDDDD url(images/ui-bg_gloss-wave_35_f6a828_500x100.png) 50% 50% repeat-x;
 	color: #ffffff;
 	font-weight: bold;
 }
@@ -869,14 +869,14 @@ body .ui-tooltip {
 .ui-state-highlight,
 .ui-widget-content .ui-state-highlight,
 .ui-widget-header .ui-state-highlight {
-	border: 1px solid #fed22f;
-	background: #ffe45c url(images/ui-bg_highlight-soft_75_ffe45c_1x100.png) 50% top repeat-x;
-	color: #363636;
+	border: 1px solid #CCCCCC;
+	background: #FFFFFF url(images/ui-bg_highlight-soft_75_ffe45c_1x100.png) 50% top repeat-x;
+	color: #444444;
 }
 .ui-state-highlight a,
 .ui-widget-content .ui-state-highlight a,
 .ui-widget-header .ui-state-highlight a {
-	color: #363636;
+	color: #444444;
 }
 .ui-state-error,
 .ui-widget-content .ui-state-error,
