--- a/app/views/enquiries/_enquiry_information.html.erb
+++ b/app/views/enquiries/_enquiry_information.html.erb
@@ -6,6 +6,10 @@
         <!-- Enquiry INFORMATION - STARTS -->
           <div class="htab">
              <h6><b>Enquiry Information</b></h6>
+              
+               <%= f.submit "Save",{:class => "btnp fr"} %>
+               <%= f.submit "Save and New",{:class => "btnp fr", :name => 'save_new'} %>
+              <div class="cl"></div>
         </div><br/>
           <div class="cols">
                <div class="col6">
