--- a/app/views/enquiries/new.html.erb
+++ b/app/views/enquiries/new.html.erb
@@ -1,19 +1,17 @@
 <script type="text/javascript">
 $(function(){
-  $("ul.tab-menus li.new").show();
+  $("ul.tab-menus li.new_enquiry").show();
   $(".tab-menus li").removeClass("active-tab");
-  $("ul.tab-menus li.new").addClass("active-tab");
-  $("ul.tab-menus li.new").trigger("click");
+  $("ul.tab-menus li.new_enquiry").addClass("active-tab");
+  $("ul.tab-menus li.new_enquiry").trigger("click");
 });
 </script>
 
 
 <div class="tab-container">
-  <%= render 'tabs' %>
-  <div class="tab-content" id="new_enquiry_id">
-  <h1>Editing enquiry</h1>
-    <%= render 'form' %>
-  </div>
+ <%= render 'tabs', :stat => "EnquiryStatus",:model => "enquiry" %> 
+    <div class="tab-content" id="new_enquiry_id">
 
+    </div>
 </div>
 
