--- a/app/views/user_configs/_colors.html.erb
+++ b/app/views/user_configs/_colors.html.erb
@@ -2,12 +2,12 @@
     <ul class="lsb">
         <li><a href="#">Theme</a></li>
         <li><ul class="theme-colrs" id="theme-color">
-    <li><span class="blue-theme" id="blue-theme" data-theme="blue" onclick="setThemeColor(this.id);">&nbsp;</span></li>
-    <li><span class="yellow-theme" id="yellow-theme" data-theme="yellow" onclick="setThemeColor(this.id);">&nbsp;</span></li>
-    <li><span class="green-theme"  id="green-theme" data-theme="green" onclick="setThemeColor(this.id);">&nbsp;</span></li>
-    <li><span class="pink-theme"  id="pink-theme" data-theme="pink" onclick="setThemeColor(this.id);">&nbsp;</span></li>
-    <li><span class="violet-theme" id="violet-theme" data-theme="violet" onclick="setThemeColor(this.id);">&nbsp;</span></li>
-    <li><span class="orange-theme" id="orange-theme" data-theme="orange" onclick="setThemeColor(this.id);">&nbsp;</span></li>
+    <li><span class="blue-theme" id="blue-theme" data-theme="blue" onclick="activateColor(this.id);">&nbsp;</span></li>
+    <li><span class="yellow-theme" id="yellow-theme" data-theme="yellow" onclick="activateColor(this.id);">&nbsp;</span></li>
+    <li><span class="green-theme"  id="green-theme" data-theme="green" onclick="activateColor(this.id);">&nbsp;</span></li>
+    <li><span class="pink-theme"  id="pink-theme" data-theme="pink" onclick="activateColor(this.id);">&nbsp;</span></li>
+    <li><span class="violet-theme" id="violet-theme" data-theme="violet" onclick="activateColor(this.id);">&nbsp;</span></li>
+    <li><span class="orange-theme" id="orange-theme" data-theme="orange" onclick="activateColor(this.id);">&nbsp;</span></li>
     </ul></li>
     </ul>
     <!-- THEME - ENDS -->
@@ -15,10 +15,10 @@
     <ul class="lsb">
     <li><a href="#">Background</a></li>
     <li><ul class="theme-colrs" id="bg-color">
-    <li><span class="blue-bg" id="blue-bg" data-bg="blue" onclick="setBGColor(this.id);">&nbsp;</span></li>
-    <li><span class="cream-bg" id="cream-bg" data-bg="cream" onclick="setBGColor(this.id);">&nbsp;</span></li>
-    <li><span class="white-bg"  id="white-bg" data-bg="white" onclick="setBGColor(this.id);">&nbsp;</span></li>
-    <li><span class="gray-bg"  id="gray-bg" data-bg="gray" onclick="setBGColor(this.id);">&nbsp;</span></li>
+    <li><span class="blue-bg" id="blue-bg" data-bg="blue" onclick="activateBg(this.id);">&nbsp;</span></li>
+    <li><span class="cream-bg" id="cream-bg" data-bg="cream" onclick="activateBg(this.id);">&nbsp;</span></li>
+    <li><span class="white-bg"  id="white-bg" data-bg="white" onclick="activateBg(this.id);">&nbsp;</span></li>
+    <li><span class="gray-bg"  id="gray-bg" data-bg="gray" onclick="activateBg(this.id);">&nbsp;</span></li>
     </ul></li>
     </ul>
     <!-- BACKGROUND - ENDS -->'
