--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -36,7 +36,7 @@ a:hover,a:visited,a:active{text-decoration:underline;}
 
 #fade{padding:0;margin:0;overflow:hidden;position: fixed;top: 0;left: 0;width:100%;height:100%;}
 #bg1{z-index:20;height:500px;position: fixed;top: 0;left: 0;width: 100%;height: 100%;background-color:rgba(0,0,0,0.5);}
-#bg2{z-index:20;height:500px;position: fixed;top: 0;left: 0;width: 100%;height: 100%;background:url(/images/images/t1.png) repeat}
+#bg2{z-index:20;height:500px;position: fixed;top: 0;left: 0;width: 100%;height: 100%;background:url(/images/t1.png) repeat}
 
 #login-box{overflow:hidden;width:640px;height:auto;border:5px solid rgb(69,69,69);margin:200px auto;z-index:30;padding:0;background-color:rgba(20,20,20,0.4);border-radius:10px;-webkit-box-shadow: 0 0 5px 1px #fff;-moz-box-shadow: 0 0 5px 1px #fff;box-shadow: 0 0 5px 1px #fff;}
 #login-box:hover{border:5px solid rgb(88,88,88);background-color:rgba(20,20,20,0.6);-webkit-box-shadow: 0 0 5px 2px #fff;-moz-box-shadow: 0 0 5px 2px #fff;box-shadow: 0 0 5px 2px #fff;}
