--- a/app/views/registrations/_listing.html.erb
+++ b/app/views/registrations/_listing.html.erb
@@ -1,5 +1,5 @@
 <% _id =  @status + "_registrations" %>
-
+<%= form_tag(url_for: "/asdf") do %>
 <table id='<%= _id %>' class="display" data-source="<%= registrations_url(format: "json") %>">
 <thead>
   <tr>
@@ -42,12 +42,12 @@
                 <span class="btnp" onclick="groupAssignTo('<%= _id %>');">Assign</span>
               </div>
             </div>
-            <input type="button" value="Send Email" class="btnp">
-             <input type="button" value="Delete" class="btnpd">
-            <input type="button" value=">" class="btnpd fr">
-            <input type="button" value="<" class="btnpd fr">
+            <%= link_to "Bulk Email", "#", {class: "btnp", onclick: "bulkEmail('#{_id}');"} %>
+            <%= link_to "Delete", "#", {class: "btnp fr", onclick: "groupDelete('#{_id}');"} %>
 
             <div class="cl"></div>
+            
+<% end %>
 <style>
 #registrations_filter input{
 width:150px;
@@ -59,8 +59,8 @@ float:left;
 </style>
 
 <script>
-
 $(function(){
-dataTableStart("<%= _id %>","<%= @status %>","<%= @cols %>")
+dataTableStart("<%= _id %>","<%= @status %>","<%= @cols %>");
+setColorsFromSession();
 });
 </script>
