--- a/app/views/registrations/_show.html.erb
+++ b/app/views/registrations/_show.html.erb
@@ -1,3 +1,12 @@
+<script type="text/javascript">
+$(function(){
+
+  activeMM("registrationsMM");
+  setColorsFromSession();
+
+});
+
+</script>
 <% a = @registration %>
 <div class="tab-content3" id="tab-content62">
 
@@ -14,6 +23,7 @@
             </h5>
             
             <%= link_to "Edit", edit_registration_path(a), {class: "btnp fr"} %>
+             <%= link_to "Clone", clone_registration_path(a), {class: "btnp fr"} %>
             
             <div class="cl"></div>
         </div>
