--- a/app/views/registrations/clone.html.erb
+++ b/app/views/registrations/clone.html.erb
@@ -3,9 +3,9 @@ $(function(){
   $("ul.tab-menus li.new_registration").show();
   $(".tab-menus li").removeClass("active-tab");
   $("ul.tab-menus li.new_registration").addClass("active-tab");
-  $("ul.tab-menus li.new_registration").text('Edit - <%= @registration.first_name.titleize %>');
+  $("ul.tab-menus li.new_registration").text('Clone - <%= @registration.first_name.titleize %>');
   $("ul.tab-menus li.new_registration").attr('data-registration_id', '<%= @registration.id %>');
-  $("ul.tab-menus li.new_registration").attr('data-cond', 'edit');
+  $("ul.tab-menus li.new_registration").attr('data-cond', 'clone');
   $("ul.tab-menus li.new_registration").trigger("click");
 });
 </script>
@@ -13,7 +13,7 @@ $(function(){
 
 <div class="tab-container">
   <%= render 'enquiries/tabs', :stat => "ApplicationStatus",:model => "registration"  %>
-  <div class="tab-content" id="edit_id">
+  <div class="tab-content" id="clone_id">
   </div>
 
 </div>
