--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -5,7 +5,7 @@ $(function(){
 });
 
 </script>
-<div class="tab-container">
+<div class="tab-container tab-content-theme">
     <%= render 'enquiries/tabs', :stat => "ApplicationStatus",:model => "registration" %>  
 </div>
 
