--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,4 +1,17 @@
+<script type="text/javascript">
+$(function(){
+  $("ul.tab-menus li.new_registration").show();
+  $(".tab-menus li").removeClass("active-tab");
+  $("ul.tab-menus li.new_registration").addClass("active-tab");
+  $("ul.tab-menus li.new_registration").trigger("click");
+});
+</script>
 
-<%= render 'form' %>
 
-<%= link_to 'Back', registrations_path %>
+<div class="tab-container">
+ <%= render 'enquiries/tabs', :stat => "ApplicationStatus",:model => "registration" %> 
+    <div class="tab-content" id="new_registration_id">
+
+    </div>
+</div>
+
